# momo_practice

./: .gitignore  README.md  conftest.py  main.py  pyproject.toml
config/: settings.py
docs/: pom_design.md  test_cases.md
pages/: base_page.py  home_page.py  product_card.py  search_results_page.py
tests/: test_autocomplete.py  test_price_filter.py  test_search.py  test_search_button.py  test_search_edge_cases.py  test_search_input.py  test_sort.py
utils/: browser_factory.py  driver_factory.py  logger.py
