[project]
name = "momo-practice"
version = "0.1.0"
description = "momo 購物網搜尋功能的 Playwright + pytest UI 自動化測試（POM）"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=8.0",
    "playwright>=1.49.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "smoke: 最基本的核心流程驗證",
    "search: 搜尋功能相關測試",
]
